--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,27 @@
-ul
-{
-color:red;
-}
 
-.color
+/*----------------menu-------------*/
+.menu
 {
- color:black;
+ background-color:#c00453 !important;
+}
+/*---------------SECCION inicio------------*/
+.Inicio_header
+{
+    background: url(../images/portada_2.jpg) 100% 100%;
+    padding-top: 50%;
+	color: #fff;
+	text-align: center;
+}
+h1
+{
+    font-family: 'Caveat', cursive;
+    color:blueviolet;
+}
+#Portafolio,#Contactos
+{
+    margin: 5%;
+}
+.contactos
+{
+    margin: 0 30%;
 }
